2017-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* syslog-all.sh: Fix the width of all plots.
	* syslog-all.sno: Print out a count of how often DSL and PPP have
	been down.

2017-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Yet another script to analyze syslogs. This time a bit more
	generic in its processing capabilities by using SNOBOL4.

	* .gitignore: Created.
	* syslog-all.sh: Created.
	* syslog-all.sno: Created.

2017-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* updown-graph.sh: Created.

2017-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* syslog-graph.sh: Use temporary files in the temporary
	directory, correctly filter out 1 Jan (when router was replaced),
	look for just "WAN 1 is" for line failure, put ticks on outside,
	change boundaries.

2017-06-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* syslog-graph.sh: Created.

2016-07-24  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* update-all.sh: Created.

2016-07-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* Makefile: Created.
	* README.md: Document rcmd-dump
	* rcmd-dump.c: Created.

2016-05-23  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* compress-pdf.sh: Better handling of filenames containing spaces.

2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* COPYING: Created.
	* README.pdf: Updated general text and details of compress-pdf.sh
	* compress-pdf.sh: Created.

2016-05-16  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.pdf: Created.