@@ -1,3 +1,9 @@
+2018-04-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
+	* Makefile: Add missing scripts and programs.
+	* camera-off.sh: Created.
+	* camera-on.sh: Created.
+
 2017-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
 	* syslog-all.sh: Fix the width of all plots.
